Add GitHub links to DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,5 +11,5 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
 Roxygen: list(markdown = TRUE)
-
-
+URL: https://github.com/ingharold-madrid/LGCU
+BugReports: https://github.com/ingharold-madrid/LGCU/issues
