--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: LGCU
 Title: Implementation of Learning Gamma CUSUM (Cumulative Sum) Control Charts
-Version: 0.1.2
+Version: 0.1.3
 Authors@R: person("Harold Manuel Madrid-Alvarez", email = "harold.madrid@unisimon.edu.co", role = c("aut", "cre"))
-Description: Description: Implements Cumulative Sum (CUSUM) control charts specifically
+Description: Implements Cumulative Sum (CUSUM) control charts specifically
  designed for monitoring processes following a Gamma distribution. Provides
  functions to estimate distribution parameters, simulate control limits, and
  apply cautious learning schemes for adaptive thresholding. It supports
